<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.careerdost.quiznew.menu_activities.Aboutus">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/appBar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/aptitude_logo" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/about_aptitude_test"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardAboutApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/cardAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="@string/summary_about"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/cardShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="7dp"
                    android:text="@string/share_app"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/shareApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/menu_share_black_24dp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardThird"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/cardFollow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:padding="10dp"
                        android:text="@string/follow_us"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardFollow"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp">

                        <ImageView
                            android:id="@+id/ytFollow"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/ic_notifications_active_black_24dp" />

                        <ImageView
                            android:id="@+id/fbFollow"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/fbfollow" />

                        <ImageView
                            android:id="@+id/twFollow"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/twfollow" />
                    </GridLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>