<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.careerdost.quiznew.activities.start_quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:text="@string/test_your_iq"
                android:textColor="#474e58"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardStartQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="4dp">

                <Button
                    android:id="@+id/btnStartQuiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="monospace"
                    android:text="@string/start_quiz_easy"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:targetApi="jelly_bean" />
            </android.support.v7.widget.CardView>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardStartQuiz"
                android:layout_centerHorizontal="true"
                android:layout_margin="14dp"
                android:padding="5dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardStartQuizNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_category"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="4dp">

                <Button
                    android:id="@+id/btnStartQuizNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@color/colorGreenOne"
                    android:fontFamily="monospace"
                    android:text="@string/start_quiz_normal"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:targetApi="jelly_bean" />
            </android.support.v7.widget.CardView>

            <Spinner
                android:id="@+id/spinner_category_normal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardStartQuizNormal"
                android:layout_centerHorizontal="true"
                android:layout_margin="14dp"
                android:padding="5dp" />
        </RelativeLayout>

        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="8"
            android:columnCount="4"
            android:rowCount="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/videoLibIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_video_library_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/videoLibIcon"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/video_examples"
                    android:textAlignment="center"
                    android:textColor="#8c8c8c"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/solExamplesIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/quiz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/solExamplesIcon"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/solved_examples"
                    android:textAlignment="center"
                    android:textColor="#8c8c8c"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/archivedIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/archived" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/archivedIcon"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/archived_questions"
                    android:textAlignment="center"
                    android:textColor="#8c8c8c"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/impFormulaeIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/formulae" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/impFormulaeIcon"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/important_formulae"
                    android:textAlignment="center"
                    android:textColor="#8c8c8c"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </GridLayout>
    </LinearLayout>
</ScrollView>